Fixed alignment of path segments in try it.

--- a/app/styles/less/buttons.less
+++ b/app/styles/less/buttons.less
@@ -2,7 +2,7 @@
   display: inline-block;
   padding: 4px 12px;
   min-width: 100px;
-  font-size: 15px;
+  font-size: 13px;
   line-height: 20px;
   cursor: pointer;
   border: 1px solid @color;
