--- a/app/styles/less/forms.less
+++ b/app/styles/less/forms.less
@@ -48,7 +48,7 @@ input {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  vertical-align: middle;
+  vertical-align: baseline;
   width: 206px;
   background-color: #ffffff;
   border: 1px solid #cccccc;
