--- a/app/styles/less/try_it.less
+++ b/app/styles/less/try_it.less
@@ -1,4 +1,11 @@
 .try-it {
+  .path {
+    display: block;
+    font-size: 15px;
+  }
+}
+
+.try-it {
   .clearfix;
 
   form {
